deployment/manifests/production/deploy-canary-1percent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: follow-feed-service-v1-canary-1percent
  namespace: follow-feed-service
  labels:
    service: follow-feed-service
    version: v1
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxSurge: 50%
       maxUnavailable: 0%
  selector:
    matchLabels:
      service: follow-feed-service
      version: v1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
      labels:
        cloud: gcp
        component: service
        entity: sharechat
        environment: prod
        team: engineering
        pod: sc-consumer-experience
        id: follow-feed-service
        platform: sharechat
        service: follow-feed-service
        version: v1
        app: follow-feed-service
        service-prometheus-track: follow-feed-service
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: service
                  operator: In
                  values:
                  - follow-feed-service
              topologyKey: "kubernetes.io/hostname"
            weight: 100
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: cloud.google.com/gke-preemptible
                operator: Exists
            weight: 100
      containers:
      - name: follow-feed-service
        image: asia.gcr.io/sharechat-production/follow-feed-service:${ parameters["commitID"] }
        imagePullPolicy: Always
        ports:
        - name: service-port
          containerPort: 3000
        readinessProbe:
          httpGet:
            path: /v1.0.0
            port: service-port
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 20
        livenessProbe:
          httpGet:
            path: /v1.0.0
            port: service-port
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
          timeoutSeconds: 20
        resources:
          limits:
            memory: 1Gi
            cpu: 1
          requests:
            memory: 500Mi
            cpu: 500m
        volumeMounts:
        - name: follow-feed-service-sa
          mountPath: /root/.gcp/
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "sleep 30"]
        terminationMessagePath: /termination-log
        terminationMessagePolicy: File
      terminationGracePeriodSeconds: 35
      volumes:
      - name: follow-feed-service-sa
        secret:
          secretName: follow-feed-service-sa
      tolerations:
      - key: "cloud.google.com/gke-preemptible"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
